--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mercury (2.3.1) unstable; urgency=medium
+  [ Erik Ziegenbalg ]
+  * Make Native Again
+
+ -- Erik Ziegenbalg <erik@ezthinking.org>  Fri, 27 Oct 2023 09:00:00 -0600
+
 mercury (2.3.1-1) unstable; urgency=medium
   [ Jerome Soumagne ]
   * Update to 2.3.1
